--- a/docroot/sites/all/themes/oira_frontend/less/responsive-max-1200.less
+++ b/docroot/sites/all/themes/oira_frontend/less/responsive-max-1200.less
@@ -148,6 +148,16 @@ div[id*="quicktabs-container-view__country_partner_content__block"]{
 	}
 }
 
+/*Facts and Figures
+***********************/
+.page-node-401.node-type-article{
+	.article-content-container{
+		h1{
+			max-width: 970px;
+		}
+	}
+}
+
 
 
 }
