--- a/docroot/sites/all/themes/oira_frontend/css/style.css
+++ b/docroot/sites/all/themes/oira_frontend/css/style.css
@@ -10592,11 +10592,21 @@ div[id^="mini-panel-partner_in_"] .partner-text2-container a:hover {
 }
 .page-node-401.node-type-article .article-content-container .pane-node-share-widget,
 .page-node-402.node-type-article .article-content-container .pane-node-share-widget {
-  display: none;
+  max-width: 1170px;
+  margin: 0 auto;
+  padding-left: 15px;
+  padding-right: 15px;
+}
+@media only screen and (max-width: 1199px) {
+  .page-node-401.node-type-article .article-content-container .pane-node-share-widget,
+  .page-node-402.node-type-article .article-content-container .pane-node-share-widget {
+    max-width: 970px;
+  }
 }
 .page-node-401.node-type-article .article-content-container .esener-template .resume-section,
 .page-node-402.node-type-article .article-content-container .esener-template .resume-section {
-  margin-bottom: 50px;
+  margin-top: 25px;
+  margin-bottom: 40px;
   font-weight: bold;
 }
 .page-node-401.node-type-article .article-content-container .esener-template > ul,
@@ -10612,45 +10622,67 @@ div[id^="mini-panel-partner_in_"] .partner-text2-container a:hover {
 .page-node-402.node-type-article .article-content-container .esener-template > ul .col-left {
   margin-bottom: 20px;
 }
+.page-node-401.node-type-article .article-content-container .esener-template > ul .col-left h2,
+.page-node-402.node-type-article .article-content-container .esener-template > ul .col-left h2 {
+  border-bottom: 2px solid #786586;
+  padding-bottom: 20px;
+  line-height: 1.4em;
+}
+.page-node-401.node-type-article .article-content-container .esener-template > ul .col-left .summary,
+.page-node-402.node-type-article .article-content-container .esener-template > ul .col-left .summary {
+  font-family: 'Oswald';
+  border-bottom: 2px solid #786586;
+  padding-bottom: 17px;
+  padding-top: 5px;
+  margin-bottom: 15px;
+  font-size: 1.1em;
+}
+.page-node-401.node-type-article .article-content-container .esener-template > ul .col-left .external-link:after,
+.page-node-402.node-type-article .article-content-container .esener-template > ul .col-left .external-link:after {
+  content: "\e164";
+  display: inline-block;
+  margin-left: 10px;
+  margin-right: 7px;
+  font-family: "Glyphicons Halflings";
+  font-style: normal;
+}
 .page-node-401.node-type-article .article-content-container .esener-template > ul .content-image,
 .page-node-402.node-type-article .article-content-container .esener-template > ul .content-image {
-  margin-top: 30px;
-  height: 200px;
+  margin-top: 45px;
   overflow: hidden;
   border: 1px solid grey;
   margin-bottom: 30px;
   cursor: pointer;
   position: relative;
+  max-height: 350px;
 }
 .page-node-401.node-type-article .article-content-container .esener-template > ul .content-image .magnifier,
 .page-node-402.node-type-article .article-content-container .esener-template > ul .content-image .magnifier {
   position: absolute;
-  top: 32%;
+  bottom: 0%;
   text-align: center;
   display: block;
-  width: 75px;
-  left: 40%;
-  height: 75px;
-  background-color: rgba(255, 255, 255, 0.7);
-  border-radius: 50%;
+  width: 50px;
+  right: 0%;
+  height: 45px;
+  background-color: #10b2e4;
   overflow: hidden;
 }
 .page-node-401.node-type-article .article-content-container .esener-template > ul .content-image .magnifier:before,
 .page-node-402.node-type-article .article-content-container .esener-template > ul .content-image .magnifier:before {
   content: "\e015";
   font-family: "Glyphicons Halflings";
-  font-size: 3em;
+  font-size: 2em;
   margin-right: 100px;
   padding-bottom: 44px;
-  margin-left: 12px;
-  line-height: 74px;
+  margin-left: 9px;
+  line-height: 45px;
   display: block;
-  color: #786586;
-  opacity: 0.5;
+  color: white;
 }
-.page-node-401.node-type-article .article-content-container .esener-template > ul .content-image:hover .magnifier:before,
-.page-node-402.node-type-article .article-content-container .esener-template > ul .content-image:hover .magnifier:before {
-  opacity: 1;
+.page-node-401.node-type-article .modal.fade.in,
+.page-node-402.node-type-article .modal.fade.in {
+  padding-right: 0px !important;
 }
 /*FOOTER
 ********************************************/
