--- a/docroot/sites/all/themes/oira_frontend/less/content.less
+++ b/docroot/sites/all/themes/oira_frontend/less/content.less
@@ -4145,15 +4145,26 @@ div[id ^= "mini-panel-partner_in_"], {
 			margin-top: 40px;
 			color: @color-text-purple;
 		}
+		@media only screen and (max-width : 991px) {
+			h1{
+				max-width: 750px !important;
+			}
+		}
 		.pane-node-share-widget{
 			max-width: 1170px;
 			margin: 0 auto;
 			padding-left: 15px;
 			padding-right: 15px;
 		}
+		
 		@media only screen and (max-width: 1199px){
 			.pane-node-share-widget{
 				max-width: 970px;
+			}
+		}
+		@media only screen and (max-width : 991px) {
+			.pane-node-share-widget{
+				max-width: 750px;
 			}
 		}
 		.esener-template{
@@ -4165,6 +4176,12 @@ div[id ^= "mini-panel-partner_in_"], {
 			> ul{
 				list-style: none;
 				margin-left: 0px;
+				li{
+					.esener-item.container{
+						padding-left: 0px;
+						padding-right: 0px;
+					}
+				}
 				li:nth-child(odd){
 					background-color: @color-primary;
 				}
@@ -4194,6 +4211,7 @@ div[id ^= "mini-panel-partner_in_"], {
 						}
 					}
 				}
+				
 				.content-image{
 					margin-top: 45px;
 				    overflow: hidden;
@@ -4202,6 +4220,7 @@ div[id ^= "mini-panel-partner_in_"], {
 				    cursor: pointer;
 				    position: relative;
 				    max-height: 350px;
+				    background-color: white;
 				    .magnifier{
 				    	position: absolute;
 					    bottom: 0%;
@@ -4225,13 +4244,35 @@ div[id ^= "mini-panel-partner_in_"], {
 					    }
 				    }
 				}
+				@media only screen and (max-width : 991px) {
+					.content-image{
+						margin-top: 0px;
+					}
+				}
 			}
 		}
 	}
 	.modal.fade.in{
 		padding-right: 0px !important;
 	}
-	.modal-dialog{
-		
+	.modal.in .modal-dialog{
+		min-width: 900px;
+	}
+	@media only screen and (max-width : 991px) {
+		.modal.in .modal-dialog{
+			min-width: 700px;
+		}
+	}
+	@media only screen and (max-width : 767px) {
+		.modal.in .modal-dialog{
+			min-width: 200px;
+		}
+	}
+	@media only screen and (max-width: 991px){
+		.article-content-container {
+		    padding-left: 0px !important;
+		    padding-right: 0px !important;
+		    width: inherit !important;
+		}
 	}
 }
