--- a/docroot/sites/all/themes/oira_frontend/less/print.less
+++ b/docroot/sites/all/themes/oira_frontend/less/print.less
@@ -445,5 +445,22 @@
 	.more-link{
 		display: none !important;
 	}
+
+	.page-node-401.node-type-article,
+	.page-node-402.node-type-article{
+		.article-content-container{
+			.content-image{
+				max-height: inherit !important;
+				img{
+					display: block !important;
+					margin: 0 auto;
+				}
+				.magnifier{
+					display: none !important;
+				}
+			}
+		}
+	}
+
 	
 }
