css changes pz- 2nd commit fixing css bugs on pz

--- a/docroot/sites/all/themes/oira_frontend/less/content.less
+++ b/docroot/sites/all/themes/oira_frontend/less/content.less
@@ -2627,7 +2627,9 @@ div[id ^= "mini-panel-partner_in_"], {
 }
 
 //partners and countries resources
-#quicktabs-container-view__country_partner_content__block, #quicktabs-container-view__country_partner_content__block_1{
+#quicktabs-container-view__country_partner_content__block,
+#quicktabs-container-view__country_partner_content__block_1,
+#quicktabs-container-view__country_partner_content__block_2{
 	.quicktabs-tabpage {
 		.field.field-name-field-country,
 		.field-type-language-field,
