--- a/docroot/sites/all/themes/oira_frontend/less/responsive-max-767.less
+++ b/docroot/sites/all/themes/oira_frontend/less/responsive-max-767.less
@@ -1085,7 +1085,9 @@ h1.page-header {
 	}
 }
 //partners and countries resources
-#quicktabs-container-view__country_partner_content__block, #quicktabs-container-view__country_partner_content__block_1{
+#quicktabs-container-view__country_partner_content__block,
+#quicktabs-container-view__country_partner_content__block_1,
+#quicktabs-container-view__country_partner_content__block_2{
 	.quicktabs-tabpage {
 		.quicktabs-views-group {
 			.node-teaser{
